add metadata to index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
 
 <head>
+    <meta name="description"
+        content="Official portfolio of violinist Hovhannes Partizpanyan. Biography, performances, videos, and contact information.">
+    <meta name="keywords"
+        content="Violinist, Hovhannes Partizpanyan, Classical Music, Concert, Musician, Armenia, Germany">
+    <meta name="author" content="Hovhannes Partizpanyan">
+    <meta name="robots" content="index, follow">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hovhannes Partizpanyan</title>
