--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta name="google-site-verification" content="0P5HHz9Ue3hbcYXItc-w6xa6qsuB9S0j5IEndbfftYE" />
     <meta name="description"
         content="Official portfolio of violinist Hovhannes Partizpanyan. Biography, performances, videos, and contact information.">
     <meta name="keywords"
